--- a/front/src/app/components/info-book/info-book.component.scss
+++ b/front/src/app/components/info-book/info-book.component.scss
@@ -165,19 +165,23 @@
 				transform: translateY(-50%);
 				width: 24px;
 				height: 24px;
-				background-color: var(--primary-color);
 				color: white;
 				border-radius: 50%;
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				font-size: 14px;
+				font-size: 1rem;
 				font-weight: bold;
-				box-shadow: 0 2px 4px rgb(from var(--black) r g b / 0.2);
 			}
 
 			.title {
 				margin-left: 2rem;
+			}
+
+			.scraping-status {
+				background-color: transparent !important;
+				box-shadow: none !important;
+				padding: 0;
 			}
 		}
 
