--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -6,6 +6,7 @@ $page-size: 1200px;
 	display: block;
 	padding: 30px 0;
 	overflow: hidden;
+	min-height: 100dvh;
 }
 
 .book-background {
@@ -40,6 +41,7 @@ $page-size: 1200px;
 .placeholder-background {
 	width: 100vw;
 	background-color: var(--primary-color);
+	opacity: 0.4;
 }
 
 .book {
@@ -188,7 +190,9 @@ $page-size: 1200px;
 							width: 100%;
 							height: 100%;
 							cursor: pointer;
-							transition: background-color 0.2s, transform 0.1s;
+							transition:
+								background-color 0.2s,
+								transform 0.1s;
 						}
 
 						.options-dropdown {
