feat(sync): implement bulk progress synchronization and improve page index safety

--- a/front/src/app/pages/user/outlet/outlet.component.html
+++ b/front/src/app/pages/user/outlet/outlet.component.html
@@ -1,7 +1,9 @@
 @if (networkStatus.isOffline()) {
 	<div class="offline-banner">
 		<span class="offline-icon">📡</span>
-		<span>Você está offline. Alguns recursos podem estar indisponíveis.</span>
+		<span
+			>Você está offline. Alguns recursos podem estar indisponíveis.</span
+		>
 	</div>
 }
 
