feat: refactor list-switch and switch components for improved input handling and loading state

--- a/front/src/app/components/inputs/switch/switch.component.html
+++ b/front/src/app/components/inputs/switch/switch.component.html
@@ -1,12 +1,16 @@
 <label class="switch-container">
 	<input
 		type="checkbox"
-		[checked]="value"
-		[disabled]="disabled"
+		[checked]="value()"
+		[disabled]="disabled()"
 		(change)="onSwitchChange($event)"
 	/>
 	<ng-content></ng-content>
-	<div class="checkmark" [class.checked]="value" [class.disabled]="disabled">
+	<div
+		class="checkmark"
+		[class.checked]="value()"
+		[class.disabled]="disabled()"
+	>
 		<div class="button"></div>
 	</div>
 </label>
