--- a/front/src/app/components/inputs/list-switch/list-switch.component.html
+++ b/front/src/app/components/inputs/list-switch/list-switch.component.html
@@ -1,4 +1,4 @@
-@for(item of items; track item.id) {
+@for(item of items(); track item.id) {
 <div class="itens">
 	<app-switch
 		[value]="isItemSelected(item)"
